# OpenEpiCentre_BackEndUbuntu

./: CLIB_OpenEpiCentre.cpp  CLIB_OpenEpiCentre.h  CMakeLists.txt  LICENSE.txt  README.md
CLIB_OpenEpiCentre/libs/CLIB_LaunchQueForThreadsAt_Server/: CMakeLists.txt
CLIB_OpenEpiCentre/libs/CLIB_LaunchQueForThreadsAt_Server/include/: CLIB_LaunchEnableForConcurrentThreadsAt_Server.h  LaunchEnableForConcurrentThreadsAt_Server__Global.h
CLIB_OpenEpiCentre/libs/CLIB_LaunchQueForThreadsAt_Server/src/: CLIB_LaunchEnableForConcurrentThreadsAt_Server.cpp  LaunchEnableForConcurrentThreadsAt_Server_Control.cpp  LaunchEnableForConcurrentThreadsAt_Server__Control.cpp  LaunchEnableForConcurrentThreadsAt_Server__Framework.cpp  LaunchEnableForConcurrentThreadsAt_Server__Global.cpp
CLIB_OpenEpiCentre/libs/CLIB_WriteQueForThreadsAt_SIMULATION/: CMakeLists.txt
CLIB_OpenEpiCentre/libs/CLIB_WriteQueForThreadsAt_SIMULATION/include/: CLIB_WriteEnableForThreadsAt_SIMULATION.h  WriteEnableForThreadsAt_SIMULATION__App.h  WriteEnableForThreadsAt_SIMULATION__Control.h
CLIB_OpenEpiCentre/libs/CLIB_WriteQueForThreadsAt_SIMULATION/src/: CLIB_WriteEnableForThreadsAt_SIMULATION.cpp  WriteEnableForThreadsAt_SIMULATION__Control.cpp
CLIB_OpenEpiCentre/libs/CLIB_WriteQueForThreadsAt_ServerOutputSend/: CLIB_WriteEnableForThreadsAt_ServerOutputSend.h  CMakeLists.txt  README.md
CLIB_OpenEpiCentre/libs/CLIB_WriteQueForThreadsAt_ServerOutputSend/include/: CLIB_WriteEnableForThreadsAt_ServerOutputSend.h  WriteEnableForThreadsAt_ServerOutputSend.h  WriteEnableForThreadsAt_ServerOutputSend_Global.h  WriteEnableForThreadsAt_ServerOutputSend__Control.h  WriteEnableForThreadsAt_ServerOutputSend__Framework.h  WriteEnableForThreadsAt_ServerOutputSend__Global.h
CLIB_OpenEpiCentre/libs/CLIB_WriteQueForThreadsAt_ServerOutputSend/src/: CLIB_WriteEnableForThreadsAt_ServerOutputSend.cpp  WriteEnableForThreadsAt_ServerOutputSend.cpp  WriteEnableForThreadsAt_ServerOutputSend_Global.cpp  WriteEnableForThreadsAt_ServerOutputSend__App.cpp  WriteEnableForThreadsAt_ServerOutputSend__Control.cpp  WriteEnableForThreadsAt_ServerOutputSend__Framework.cpp  WriteEnableForThreadsAt_ServerOutputSend__Global.cpp
TestBench/: CMakeLists.txt  IO.cpp  IO.h  LICENSE.txt  Main.cpp  README.md
TestBench/include/engine/: App.h  Data.h  Execute.h  Execute_Control.h  Framework.h  Framework_App.h
TestBench/include/io/: LaunchQue_Server.h  OpenEpiCentre.h  WriteQue_ServerInputRecieve.h  WriteQue_ServerOutputSend.h
TestBench/libs/CLIB_LaunchQueForThreadsAt_Server/: LICENSE.txt
TestBench/libs/CLIB_LaunchQueForThreadsAt_Server/include/: CLIB_LaunchEnableForConcurrentThreadsAt_Server.h  LaunchEnableForConcurrentThreadsAt_Server_Global.h  LaunchEnableForConcurrentThreadsAt_Server__App.h  LaunchEnableForConcurrentThreadsAt_Server__Control.h  LaunchEnableForConcurrentThreadsAt_Server__Framework.h
TestBench/libs/CLIB_LaunchQueForThreadsAt_Server/src/: CLIB_LaunchEnableForConcurrentThreadsAt_Server.cpp  LaunchEnableForConcurrentThreadsAt_Server.cpp  LaunchEnableForConcurrentThreadsAt_Server_Framework.cpp  LaunchEnableForConcurrentThreadsAt_Server_Global.cpp  LaunchEnableForConcurrentThreadsAt_Server__App.cpp
TestBench/libs/CLIB_OpenEpiCentre/: CMakeLists.txt
TestBench/libs/CLIB_OpenEpiCentre/include/: CLIB_OpenEpiCentre.h
TestBench/libs/CLIB_OpenEpiCentre/src/: CLIB_OpenEpiCentre.cpp
TestBench/libs/CLIB_WriteQueForThreadsAt_SIMULATION/: CMakeLists.txt  LICENSE.txt
TestBench/libs/CLIB_WriteQueForThreadsAt_SIMULATION/include/: CLIB_WriteEnableForThreadsAt_SIMULATION.h  WriteEnableForThreadsAt_SIMULATION.h  WriteEnableForThreadsAt_SIMULATION_Control.h  WriteEnableForThreadsAt_SIMULATION_Framework.h  WriteEnableForThreadsAt_SIMULATION_Global.h  WriteEnableForThreadsAt_SIMULATION__App.h  WriteEnableForThreadsAt_SIMULATION__Framework.h  WriteEnableForThreadsAt_SIMULATION__Global.h
TestBench/libs/CLIB_WriteQueForThreadsAt_SIMULATION/src/: CLIB_WriteEnableForThreadsAt_SIMULATION.cpp  WriteEnableForThreadsAt_SIMULATION.cpp  WriteEnableForThreadsAt_SIMULATION_Control.cpp  WriteEnableForThreadsAt_SIMULATION_Framework.cpp  WriteEnableForThreadsAt_SIMULATION_Global.cpp  WriteEnableForThreadsAt_SIMULATION__App.cpp  WriteEnableForThreadsAt_SIMULATION__Control.cpp  WriteEnableForThreadsAt_SIMULATION__Framework.cpp  WriteEnableForThreadsAt_SIMULATION__Global.cpp
TestBench/libs/CLIB_WriteQueForThreadsAt_ServerInputReceive/: CMakeLists.txt  LICENSE.txt
TestBench/libs/CLIB_WriteQueForThreadsAt_ServerInputReceive/include/: CLIB_WriteEnableForThreadsAt_ServerInputReceive.h  WriteEnableForThreadsAt_ServerInputReceive_Global.h  WriteEnableForThreadsAt_ServerInputReceive__App.h  WriteEnableForThreadsAt_ServerInputReceive__Control.h  WriteEnableForThreadsAt_ServerInputReceive__Framework.h  WriteEnableForThreadsAt_ServerInputReceive__Global.h
TestBench/libs/CLIB_WriteQueForThreadsAt_ServerInputReceive/src/: CLIB_WriteEnableForThreadsAt_ServerInputReceive.cpp  WriteEnableForThreadsAt_ServerInputReceive.cpp  WriteEnableForThreadsAt_ServerInputReceive_Control.cpp  WriteEnableForThreadsAt_ServerInputReceive_Framework.cpp  WriteEnableForThreadsAt_ServerInputReceive__App.cpp  WriteEnableForThreadsAt_ServerInputReceive__Framework.cpp  WriteEnableForThreadsAt_ServerInputReceive__Global.cpp
TestBench/libs/CLIB_WriteQueForThreadsAt_ServerOutputSend/: CMakeLists.txt  LICENSE.txt
TestBench/libs/CLIB_WriteQueForThreadsAt_ServerOutputSend/include/: CLIB_WriteEnableForThreadsAt_ServerOutputSend.h  WriteEnableForThreadsAt_ServerOutputSend__App.h  WriteEnableForThreadsAt_ServerOutputSend__Framework.h
TestBench/libs/CLIB_WriteQueForThreadsAt_ServerOutputSend/src/: CLIB_WriteEnableForThreadsAt_ServerOutputSend.cpp  WriteEnableForThreadsAt_ServerOutputSend_Control.cpp  (+4 more)
TestBench/libs/OpenEpiCentre/: CMakeLists.txt
TestBench/src/engine/: App.cpp  Data.cpp  Execute.cpp  Execute_Control.cpp  Framework.cpp  Framework_App.cpp
TestBench/src/io/: LaunchQue_Server.cpp  OpenEpiCentre.cpp  WriteQue_ServerInputRecieve.cpp  WriteQue_ServerOutputSend.cpp
engine/: Algorithms.cpp  (+15 more)
(+279 files in other folders)
